--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
-pandas
-sklearn
-astroid==2.3.3
-Click==7.0
-colorama==0.4.3
-fastapi==0.47.1
+click==7.1.1
+fastapi==0.54.1
 gunicorn==20.0.4
 h11==0.9.0
-isort==4.3.21
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-pydantic==1.4
-pylint==2.4.4
-six==1.14.0
-starlette==0.12.9
-uvicorn==0.11.7
+httptools==0.1.1
+joblib==0.16.0
+numpy==1.19.1
+pandas==1.1.1
+pydantic==1.5.1
+python-dateutil==2.8.1
+pytz==2020.1
+scikit-learn==0.23.2
+scipy==1.5.2
+six==1.15.0
+sklearn==0.0
+starlette==0.13.2
+threadpoolctl==2.1.0
+uvicorn==0.11.3
+uvloop==0.14.0
 websockets==8.1
-wrapt==1.11.2
