--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ pandas==1.1.1
 pydantic==1.5.1
 python-dateutil==2.8.1
 pytz==2020.1
-scikit-learn==0.23.2
+scikit-learn==0.22.2.post1
 scipy==1.5.2
 six==1.15.0
 sklearn==0.0
@@ -18,3 +18,4 @@ threadpoolctl==2.1.0
 uvicorn==0.11.3
 uvloop==0.14.0
 websockets==8.1
+ .
