--- a/Dockerfile copy_no gcp
+++ b/Dockerfile copy_no gcp
@@ -2,3 +2,6 @@ FROM tiangolo/uvicorn-gunicorn-fastapi:python3.7
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 COPY . /app
+WORKDIR /app
+EXPOSE 80
+CMD uvicorn main:app --port=5000 --host=0.0.0.0
